<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2024.  hurricaneDev Development
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/folder_24"
        android:iconTint="@color/nav_selector"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_progress"
        android:icon="@drawable/arrow_circle_down"
        android:iconTint="@color/nav_selector"
        android:title="@string/progress" />

    <item
        android:id="@+id/navigation_downloads"
        android:icon="@drawable/ic_file_download"
        android:iconTint="@color/nav_selector"
        android:title="@string/title_downloads" />
    <item
        android:id="@+id/navigation_tutorial"
        android:icon="@drawable/ic_play"
        android:iconTint="@color/nav_selector"
        android:title="@string/title_tutorial" />

</menu>
