<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2024.  Andres Mora getSoftware CO
  -->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/back_screen"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/main_content"
        android:layout_above="@id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--Toolbar-->

        <ImageView
            android:id="@+id/btn_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:padding="16dp"
            android:src="@drawable/ic_home" />

        <ImageView
            android:id="@+id/btn_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="16dp"
            android:src="@drawable/config_button" />

        <TextView
            android:id="@+id/title_download"
            android:layout_width="30px"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="123dp"
            android:layout_marginTop="120px"
            android:layout_marginEnd="116dp"
            android:gravity="center"
            android:text="@string/share_msg"
            android:textColor="#FFFFFF"
            android:textSize="23sp"
            android:textStyle="bold" />

        <!-- Home -->
        <include
            android:id="@+id/browser_toolbar"
            layout="@layout/browser_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_download"
            android:layout_alignParentStart="true"
            android:layout_marginStart="-1dp"
            android:layout_marginTop="0dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:id="@+id/home_container"
            android:layout_below="@id/browser_toolbar">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_apps"
                android:backgroundTint="#A1F6F1EF"
                app:cardCornerRadius="70px"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="214dp"
                    android:layout_marginBottom="0dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginLeft="65px"
                        android:layout_marginTop="55px"
                        android:text="@string/recommend"
                        android:textColor="@color/dark_gray"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="8dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/instagram_btn"
                            android:layout_width="0dp"
                            android:layout_height="64dp"
                            android:layout_margin="40px"
                            android:layout_weight="1"
                            android:maxWidth="64dp"
                            android:src="@drawable/frame_fb" />

                        <ImageView
                            android:id="@+id/fb_btn"
                            android:layout_width="0dp"
                            android:layout_height="64dp"
                            android:layout_margin="40px"
                            android:layout_weight="1"
                            android:maxWidth="64dp"
                            android:src="@drawable/frame_inst" />

                        <ImageView
                            android:id="@+id/twitter_btn"
                            android:layout_width="0dp"
                            android:layout_height="64dp"
                            android:layout_margin="40px"
                            android:layout_weight="1"
                            android:maxWidth="64dp"
                            android:src="@drawable/frame_vim" />

                        <ImageView
                            android:id="@+id/reddit_btn"
                            android:layout_width="0dp"
                            android:layout_height="64dp"
                            android:layout_margin="40px"
                            android:layout_weight="1"
                            android:maxWidth="64dp"
                            android:src="@drawable/frame_dai" />

                        <ImageView
                            android:id="@+id/tiktok_btn"
                            android:layout_width="0dp"
                            android:layout_height="64dp"
                            android:layout_margin="40px"
                            android:layout_weight="1"
                            android:maxWidth="64dp"
                            android:src="@drawable/frame_wa" />

                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="266dp"
                app:adSize="BANNER"
                app:adUnitId="@string/banner" />

        </RelativeLayout>

    </RelativeLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        app:elevation="4dp"
        app:itemBackground="@android:color/white"
        app:itemIconTint="@color/nav_selector"
        app:itemTextColor="@color/nav_selector"
        app:labelVisibilityMode="auto"
        app:menu="@menu/bottom_nav_menu" />

</RelativeLayout>